--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -65,6 +65,27 @@
     "installWarning": "安装此技能可能会危及系统安全。请在继续之前验证源的真实性。",
     "abort": "中止",
     "proceedAnyway": "仍然继续",
+    "marketplace": {
+      "found": "找到 {{count}} 个技能",
+      "search": "搜索技能...",
+      "hideInstalled": "隐藏已安装",
+      "clearFilters": "清除筛选",
+      "noResults": "没有找到包含\"{{query}}\"的技能",
+      "noSkillsInFilter": "当前筛选条件下没有技能",
+      "localRepo": "📁 本地",
+      "allRepos": "全部"
+    },
+    "installedPage": {
+      "count": "已安装 {{count}} 个技能",
+      "search": "搜索已安装的技能...",
+      "clearSearch": "清除搜索",
+      "noResults": "没有找到包含\"{{query}}\"的技能",
+      "empty": "还没有安装任何技能"
+    },
+    "folder": {
+      "opened": "已打开文件夹",
+      "openFailed": "打开文件夹失败：{{error}}"
+    },
     "toast": {
       "installed": "[成功] 技能已安装",
       "installFailed": "[错误] 安装失败",
@@ -91,6 +112,30 @@
     "scanning": "扫描中",
     "noReposFound": "未发现仓库",
     "clickAddRepo": "点击「添加仓库」以配置您的第一个仓库",
+    "cache": {
+      "stats": "缓存统计",
+      "totalRepos": "总仓库数",
+      "cached": "已缓存",
+      "size": "缓存大小",
+      "statusCached": "已缓存",
+      "statusUncached": "未缓存",
+      "refresh": "刷新缓存",
+      "refreshing": "刷新中",
+      "refreshTooltip": "刷新缓存（重新下载）",
+      "clear": "清理缓存",
+      "clearTooltip": "清理本地缓存",
+      "confirmClear": "确定要清理此仓库的缓存吗？下次扫描将重新下载。",
+      "confirmRefresh": "确定要刷新缓存吗？将重新下载最新版本的仓库内容。",
+      "cleared": "缓存已清理",
+      "refreshed": "缓存已刷新，发现 {{count}} 个skills",
+      "clearFailed": "清理失败: {{error}}",
+      "refreshFailed": "刷新失败: {{error}}"
+    },
+    "date": {
+      "today": "今天",
+      "yesterday": "昨天",
+      "daysAgo": "{{days}}天前"
+    },
     "toast": {
       "added": "仓库已添加 // 扫描技能中...",
       "error": "错误：",
