--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -5,7 +5,7 @@
   },
   "nav": {
     "security": "安全扫描",
-    "installed": "已安装",
+    "installed": "我的技能",
     "marketplace": "技能市场",
     "repositories": "仓库配置"
   },
