feat: 自动触发仓库扫描并优化提示信息

--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -163,7 +163,7 @@
       "daysAgo": "{{days}}天前"
     },
     "toast": {
-      "added": "仓库已添加 // 扫描技能中...",
+      "added": "仓库已添加，扫描技能中...",
       "error": "错误：",
       "foundSkills": "发现 {{count}} 个技能",
       "scanError": "扫描错误："
