feat: Enhance OverviewPage with cyberpunk style and improved UI elements
- Updated OverviewPage to include new icons and animations for a more engaging user experience.
- Added a subtitle to the page header displaying the count of managed skills.
- Enhanced button styles and added scanning animations for better feedback during operations.
- Improved layout and spacing for statistics and scan status sections.
- Introduced new visual indicators for issue details and risk distribution.
- Updated localization files to include new strings for the added features.
- Added CSS animations for data flow effects and scan line animations.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -253,6 +253,13 @@
   },
   "overview": {
     "title": "SYSTEM_OVERVIEW",
+    "subtitle": "Managing {{count}} skills securely",
+    "section": {
+      "statistics": "STATISTICS",
+      "scanStatus": "SCAN_STATUS",
+      "riskDistribution": "RISK_DISTRIBUTION",
+      "issueDetails": "ISSUE_DETAILS"
+    },
     "statistics": {
       "installedSkills": "INSTALLED_SKILLS",
       "repositories": "REPOSITORIES",
@@ -288,6 +295,10 @@
       "viewDetails": "VIEW_DETAILS",
       "viewFullReport": "VIEW_FULL_REPORT",
       "noIssues": "EXCELLENT! ALL_SKILLS_ARE_SAFE",
+      "skillSafe": "This skill is safe",
+      "noCriticalIssues": "Great! No critical risk skills",
+      "noMediumIssues": "Good! No medium risk skills",
+      "noSafeSkills": "No safe skills found",
       "lastScanned": "LAST_SCANNED: {{time}}",
       "openDirectory": "OPEN_DIR",
       "uninstall": "UNINSTALL",
