首页显示调整

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -292,6 +292,7 @@
     },
     "issues": {
       "found": "{{count}} ISSUES_FOUND: {{breakdown}}",
+      "clearFilters": "CLEAR_FILTERS",
       "viewDetails": "VIEW_DETAILS",
       "viewFullReport": "VIEW_FULL_REPORT",
       "noIssues": "EXCELLENT! ALL_SKILLS_ARE_SAFE",
