修复了skills在线更新的一些问题

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -96,6 +96,7 @@
         "highRisk": "High Risk",
         "mediumRisk": "Medium Risk",
         "cancel": "Cancel",
+        "continue": "Continue",
         "installAnyway": "Install Anyway",
         "installCautiously": "Install Cautiously",
         "install": "Install",
@@ -122,8 +123,9 @@
       "noUpdates": "ALL_SKILLS_UP_TO_DATE",
       "checkUpdatesFailed": "CHECK_UPDATES_FAILED: {{error}}",
       "updateAvailable": "UPDATE_AVAILABLE",
-      "preparingUpdate": "PREPARING...",
+      "preparingUpdate": "Preparing Update",
       "updateScanResult": "Update Security Scan Result",
+      "updateTip": "Before updating: Close Claude CLI and any editors (like VSCode) that may have skill files open to avoid file access issues",
       "conflictDetected": "File Conflicts Detected",
       "conflictDescription": "The following files have been modified locally and will be overwritten by the update:",
       "forceOverwrite": "I understand the risks, force overwrite local changes",
