--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -96,6 +96,7 @@
         "highRisk": "高风险",
         "mediumRisk": "中风险",
         "cancel": "取消",
+        "continue": "继续",
         "installAnyway": "仍然安装",
         "installCautiously": "谨慎安装",
         "install": "安装",
@@ -122,8 +123,9 @@
       "noUpdates": "所有技能都是最新版本",
       "checkUpdatesFailed": "检查更新失败：{{error}}",
       "updateAvailable": "有更新",
-      "preparingUpdate": "准备中...",
+      "preparingUpdate": "准备更新",
       "updateScanResult": "更新安全扫描结果",
+      "updateTip": "建议在更新前：关闭 Claude CLI、关闭可能打开技能文件的编辑器（如 VSCode），以避免文件占用问题",
       "conflictDetected": "检测到文件冲突",
       "conflictDescription": "以下文件在本地已被修改，更新将覆盖这些修改：",
       "forceOverwrite": "我了解风险，强制覆盖本地修改",
