feat: 改为手动点击翻译按钮触发翻译
- 每个技能卡片添加翻译按钮（语言图标）
- 点击后翻译名称和描述
- 翻译目标语言使用应用设置的语言
- 翻译状态显示加载动画
- 翻译完成后显示紫色图标

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -155,6 +155,7 @@
     },
     "translation": {
       "translating": "TRANSLATING...",
+      "translate": "TRANSLATE",
       "translationFailed": "TRANSLATION_FAILED",
       "translatedContent": "TRANSLATED",
       "apiKeyMissing": "TRANSLATION_REQUIRES_API_KEY",
