fix: 修复翻译功能调用参数问题并添加错误提示
- 前端 invoke 调用使用 snake_case 参数名以匹配后端 Rust 命令
- 添加 appToast 错误提示，当翻译失败时直观反馈
- 确保 source_lang 和 target_lang 参数正确传递

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -400,7 +400,7 @@
       "password": "Password (Optional)",
       "save": "Save",
       "saving": "Saving...",
-      "saved": "Proxy settings saved",
+      "saved": "Proxy settings saved, restart app to apply",
       "saveFailed": "Save failed: {{error}}",
       "test": "Test Proxy",
       "testing": "Testing...",
