弹窗按钮修复

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -117,6 +117,7 @@
     "moreIssues": "MORE_ISSUES",
     "installWarning": "Installing this skill may compromise system security. Verify source authenticity before proceeding.",
     "abort": "ABORT",
+    "cancel": "Cancel",
     "proceedAnyway": "PROCEED_ANYWAY",
     "marketplace": {
       "found": "FOUND_{{count}}_SKILLS",
